# mips-tester

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/img/: diagrams.drawio
examples/factorial/: factorial.asm  test_factorial.py
examples/factorial_json/: test_json.py  tests.json
mips-tester/: core.py
mips_tester/: __init__.py  core.py  harness.py  json.py  models.py  runner.py
tests/: test_harness.py  test_runner.py  utils.py
