[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mips_tester"]

[project]
name = "mips_tester"
version = "0.1.0"
description = "A Python library for testing MIPS assembly functions / programs using the Mars MIPS simulator"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = ["pydantic"]
authors = [{ name = "Satya Jhaveri" }]


